# MinCraft

./: .clang-format  .clang-tidy  .cmake-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  code_style.md  uncrustify.cfg
.github/workflows/: clang-format-check.yml
cmake/: dependencies.cmake  functions.cmake  imgui.cmake
examples/: chunks_test.cc  glfw_info.cc  vk_info.cc  vkinfo.cc
include/chunk/: block_id.inc  chunk.h  chunk_gen.h  region.h
include/chunk/chunk/: chunk.h  chunk_man.h  chunk_mesher.h  position.h  region.h
include/chunk/chunk/detail/: block_id.inc
include/common/common/: block_id.macro.h  glfw_include.h  pos.h  utility.h  utils.h  vulkan_include.h  window_base.h
include/common/utils/: algorithm.h  color.h  concepts.h  files.h  misc.h  patchable.h  range.h  transparent.h
include/common/vkwrap/: utils.h
include/glfw/glfw/: core.h  input.h  window.h
include/glfw/glfw/input/: keyboard.h  mouse.h
include/glfw/input/: keyboard.h
include/glfw/window/: error.h  window.h
include/imgui/gui/: gui.h  gui.hpp
include/position/: position.h
include/unified_includes/unified_includes/: vulkan_include.h
include/vk/io/glfw/: core.h  window.h
include/vk/vkwrap/: core.h  debug.h  device.h  error.h  instance.h  queues.h  surface.h
include/vk/vkwrap/selectors/: pdev.h
include/vk/vkwrap/window/: glfw.h
include/vkwrap/vkwrap/: buffer.h  command.h  core.h  debug.h  descriptors.h  device.h  error.h  framebuffer.h  image.h  image_view.h  instance.h  mman.h  pipeline.h  pipeline_cfgs.h  queues.h  render_pass.h  renderpass.h  sampler.h  shader_module.h  surface.h  swapchain.h  utils.h
include/vkwrap/vkwrap/temporary/: swapchain.hpp
shaders/: fragment_shader.frag  vertex_shader.vert
src/: glfw.cc  mincraft.cc
src/chunk/: chunk_gen.cc  chunk_man.cc  chunk_mesher.cc  region.cc
src/glfw/: input.cc  window.cc
src/mincraft/: camera.h  glm_include.h  glm_include.hpp  info_gui.cc  info_gui.h  infogui.cc  infogui.h  mincraft.cc
src/vk/: debug.cc  loader.cc  surface.cc
textures/: texture.ktx2
utils/: vkinfo.cc
